--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="UTF8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
-        <title>To-do List</title>
+        <title>To-do List Application</title>
     </head>
     <body>
         <h1> Simple To-Do List</h1>
         <div class="todo-container">
             <input type="text" id="taskInput" placeholder="Add a new task..." />
             <button id="addTaskBtn">Add a Task</button>
+            <button id="deleteTask">Delete a Task</button>
             <ul id="taskList"></ul>
         </div>
         <script src="script.js"></script>
